app-deployment/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: notejam-svc
spec:
  type: ClusterIP
  selector:
    app: notejam
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
