app-deployment/ingress.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: notejam-ingress
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - stio-gateway
  http:
    - match:
      - uri:
          prefix: /
      route:
        - destination:
            host: notejam-svc.default.svc.cluster.local
            port:
              number: 80
